--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,18 @@ services:
       - DB_POSTGRESDB_USER=n8n
       - DB_POSTGRESDB_PASSWORD=n8n_password
       - NODE_FUNCTION_ALLOW_EXTERNAL=pg
+      - EXECUTIONS_PROCESS=main
+      - GENERIC_TIMEZONE=America/Guatemala
       - PORT=5555
     ports:
       - "5555:5555"
     depends_on:
       - postgres
-
+    command: >
+      sh -c "
+      sleep 10 &&
+      n8n start --tunnel"
+      
   postgres:
     image: postgres:12
     environment:
