--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,13 @@ services:
       - "5555:5555"
     depends_on:
       - postgres
+    command: >
+      sh -c "
+      until pg_isready -h postgres -p 5432 -U n8n; do
+        echo 'Waiting for Postgres...';
+        sleep 2;
+      done;
+      n8n start"
 
   postgres:
     image: postgres:12
